Add POST /messages endpoint, func
