# src/data/entities/message.entity.ts
@@ -1,4 +1,4 @@
-import { Entity, Column, ManyToOne, CreateDateColumn } from 'typeorm';
+import { Entity, Column, ManyToOne, CreateDateColumn, JoinColumn } from 'typeorm';
 import { BaseEntity } from './base.entity';
 import { User } from './user.entity';
 
@@ -11,8 +11,16 @@ export class Message extends BaseEntity {
   dateSent: Date;
 
   @ManyToOne(() => User)
+  @JoinColumn([{ name: 'senderId' }])
   sender: User;
 
+  @Column()
+  senderId: number;
+
   @ManyToOne(() => User)
+  @JoinColumn([{ name: 'recipientId' }])
   recipient: User;
+
+  @Column()
+  recipientId: number;
 }
